# nexus-bot-v2

./: Dockerfile  requirements.txt
.github/workflows/: ci.yml
apps/discord-bot/: .env.example  main.py  pyproject.toml
apps/discord-bot/bot/: app.py  registrar.py  services.py  settings.py  wiring.py
apps/discord-bot/bot/commands/: admin.py  help.py  story.py
apps/discord-bot/bot/recovery/: view_rehydrator.py
apps/discord-bot/bot/services/: channel_policy_service.py  interaction_guard_service.py  metrics_service.py  player_service.py  progression_service.py  rate_limit_service.py  session_service.py  story_service.py
apps/discord-bot/bot/ui/embeds/: status_embed.py  story_embed.py
apps/discord-bot/bot/ui/views/: persistent_story_view.py
