[project]
name = "nexus-bot-v2"
version = "0.1.0"
description = "Arabic interactive Discord story bot (Nexus)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "discord.py>=2.3.0",
  "flask>=2.0.0",
  "python-dotenv>=1.0.0",
  "aiosqlite>=0.19.0",
  "psutil>=5.9.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.7",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
